using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public static class Tags
    {
        public static string NORMAL_PLATFORM = "NormalPlatform";
        public static string ROTATING_PLATFORM = "RotatingPlatform";
        public static string OBSTACLE = "Obstacle";
        public static string FINISH = "Finish";
        public static string SEA = "Sea";
        public static string ROTATOR_ZONE = "RotatorZone";


    }

    public static class Prefs
    {
        public static string LEVEL = "Level";
    }


    public static class Animations
    {
        public static string IDLE = "Idle";
        public static string RUN = "Run";
        public static string VICTORY = "Victory";
    }

}
